@@ -82,7 +82,7 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
     }
     else
     {
-        ismcast = 1;
+        ismcast = 0;
         maxwait = atoi(SLPGetProperty("net.slp.unicastMaximumWait")) / 1000;
         wait    = maxwait;
     }
@@ -137,7 +137,7 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
     }
     
     /* repeat loop until timeout or until the retransmit exceeds mtu */
-    while(maxwait > 0 && size + prlistlen < mtu)
+    do
     {
         if(SLPBufferRealloc(buf, size + prlistlen) == 0)
         {
@@ -227,6 +227,7 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
         }
             
         rplynet = 0;
+
         while(1)
         {
             /* Recv the SrvAck */
@@ -288,6 +289,12 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
                     goto FINISHED;
                 }
                    
+            }while(ismcast) /* repeat again if rqst was mcast */
+
+            if(ismcast == 0)
+            {
+                /* no need to recv again because we were talking to DA */
+                break;
             }
         }
 
@@ -298,11 +305,11 @@ SLPError ProcessAttrRqst(PSLPHandleInfo handle)
             break;
         }
         
-        
         /* calculate the wait for the next retry */
         maxwait = maxwait - wait;
         wait = wait * 2;
-    }
+
+    }while(ismcast && maxwait > 0 && size + prlistlen < mtu);
 
     /*----------------*/
     /* We're all done */
